--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,12 @@
 @import "tailwindcss";
 
-
+@theme {
+  --font-sans: var(--font-inter);
+  --font-poppins: var(--font-poppins);
+  --color-brand: #ff2e63;
+  --color-background: #1a1a2e;
+  --color-secondary: #f08a5d;
+  --color-text: #eaeaea;
+  --color-secondary-background: #232342;
+  
+}
